syntax = "proto3";
import "google/protobuf/wrappers.proto";

option go_package = "common/";


service OrderManagement {
  rpc getOrder(google.protobuf.StringValue) returns (Order);
  //  返回响应流
  rpc searchOrder(google.protobuf.StringValue) returns (stream Order);

  // 更新订单
  rpc updateOrder(stream Order) returns (google.protobuf.StringValue);
}

message Order {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}